--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -820,11 +820,11 @@ paths:
         - in: formData
           name: actualsFile
           type: file
-          description: The input file for the comparison of forecast runs.
+          description: The actuals file for the comparison of forecast runs.
         - in: formData
           name: businessFile
           type: file
-          description: The input file for the comparison of forecast runs.
+          description: The buisness file for the comparison of forecast runs.
         - in: formData
           name: "comparisonName"
           type: "string"
@@ -1681,10 +1681,10 @@ definitions:
         description: "Date/Time for the triggered comparison"
       actualsFile:
         type: string
-        description: "input file for the comparison of forecast runs"
+        description: "actuals file for the comparison of forecast runs"
       buisnessFile:
         type: string
-        description: "input file for the comparison of forecast runs"
+        description: "buisness file for the comparison of forecast runs"
       targetFolder:
         type: string
         description: "target folder to add comparison.html"
