--- a/packages/data-product-backend/data-product-lib/src/main/resources/api/UserWidgetPreference.yaml
+++ b/packages/data-product-backend/data-product-lib/src/main/resources/api/UserWidgetPreference.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  AJSHIVA
+#  Created By         :
 #
 #  Bug Number         :
 #  Changed By         :
