--- a/packages/dashboard-backend/dashboard-lib/src/main/resources/api/UserWidgetPreference.yaml
+++ b/packages/dashboard-backend/dashboard-lib/src/main/resources/api/UserWidgetPreference.yaml
@@ -35,7 +35,7 @@
 #
 #  CHANGE HISTORY
 #
-#  Created By         :  PRINCKU
+#  Created By         :
 #
 #  Bug Number         :
 #  Changed By         :
