--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -405,7 +405,7 @@ paths:
         500:
           description: "Internal error"
 
-  /solutions/{id}/reassignOwner/{userId}:
+  /solutions/{id}/reassignOwner:
     patch:
       tags:
         - "solutions"
