--- a/packages/trino-backend/trino-backend-lib/build.gradle
+++ b/packages/trino-backend/trino-backend-lib/build.gradle
@@ -94,6 +94,15 @@ sourceSets {
 
 
 dependencies {
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream', version: '3.2.4'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-stream-binder-kafka', version: '3.2.4'
+	implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.8.6'
+
+	implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.4.2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.5.0'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.20'
+    //implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-vault-config', version: '3.1.1'
+	implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.9.2'
 	
 	implementation group: 'io.trino', name: 'trino-jdbc', version: '387'
 	
@@ -120,6 +129,17 @@ dependencies {
     implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.30'
 
     implementation('ch.qos.logback:logback-core:1.2.3')
+
+	implementation group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
+    
+	implementation (group: 'com.graphql-java', name: 'graphql-java-tools', version: '5.2.4'){
+        exclude (group: 'com.fasterxml.jackson.core')
+    }
+	
+	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.3'
+	
+	implementation group: 'com.graphql-java', name: 'graphql-java-extended-scalars', version: '1.0'
+	
     
     implementation 'io.swagger:swagger-annotations:1.6.2'
 
