--- a/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/main/kustomization.yaml
+++ b/deployment/kubernetes/kubeflow/kfp-multi-user/manifests/main/kustomization.yaml
@@ -4,44 +4,44 @@ kind: Kustomization
 resources:
 # Cert-Manager
 #- ../common/cert-manager/cert-manager/base
-- ../common/cert-manager/kubeflow-issuer/base
+  - ../common/cert-manager/kubeflow-issuer/base
 # Istio
-- ../common/istio-1-9/istio-crds/base
-- ../common/istio-1-9/istio-namespace/base
-- ../common/istio-1-9/istio-install/base
+  - ../common/istio-1-9/istio-crds/base
+  - ../common/istio-1-9/istio-namespace/base
+  - ../common/istio-1-9/istio-install/base
 # OIDC Authservice
-- ../common/oidc-authservice/base
+  - ../common/oidc-authservice/base
 # # Dex
 # - ../common/dex/overlays/istio
 # KNative
- - ../common/knative/knative-serving/overlays/gateways
- - ../common/knative/knative-eventing/base
- - ../common/istio-1-9/cluster-local-gateway/base
+  - ../common/knative/knative-serving/overlays/gateways
+  - ../common/knative/knative-eventing/base
+  - ../common/istio-1-9/cluster-local-gateway/base
 # Kubeflow namespace
-- ../common/kubeflow-namespace/base
+  - ../common/kubeflow-namespace/base
 # Kubeflow Roles
-- ../common/kubeflow-roles/base
+  - ../common/kubeflow-roles/base
 # Kubeflow Istio Resources
-- ../common/istio-1-9/kubeflow-istio-resources/base
+  - ../common/istio-1-9/kubeflow-istio-resources/base
 
 
 # Kubeflow Pipelines
-- ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
+  - ../apps/pipeline/upstream/env/platform-agnostic-multi-user-emissary
 # # KFServing
- - ../apps/kfserving/upstream/overlays/kubeflow
+  - ../apps/kfserving/upstream/overlays/kubeflow
 # # Katib
 # - ../apps/katib/upstream/installs/katib-with-kubeflow
 # Central Dashboard
 # - ../apps/centraldashboard/upstream
-- ../apps/centraldashboard/upstream/overlays/istio
+  - ../apps/centraldashboard/upstream/overlays/istio
 # Admission Webhook
-- ../apps/admission-webhook/upstream/overlays/cert-manager
+  - ../apps/admission-webhook/upstream/overlays/cert-manager
 # # Notebook Controller
 # - ../apps/jupyter/jupyter-web-app/upstream/overlays/istio
 # # Jupyter Web App
 # - ../apps/jupyter/notebook-controller/upstream/overlays/kubeflow
 # Profiles + KFAM
-- ../apps/profiles/upstream/overlays/kubeflow
+  - ../apps/profiles/upstream/overlays/kubeflow
 # # Volumes Web App
 # - ../apps/volumes-web-app/upstream/overlays/istio
 # # Tensorboards Controller
@@ -53,4 +53,4 @@ resources:
 # # MPI Operator
 # - ../apps/mpi-job/upstream/overlays/kubeflow
 # User namespace
-- ../common/user-namespace/base
+  # - ../common/user-namespace/base
