--- a/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
+++ b/packages/chronos/chronos-lib/src/main/resources/api/forecast.yaml
@@ -601,7 +601,7 @@ paths:
           description: "If true, then run on Powerful Machines"
           required: false
         - in: formData
-          name: infotext
+          name: chronosVersion
           type: string
           description: Text field to denote Chronos Version
           required: false
