GenAI summary page change and adding Direct chat Tile

--- a/deployment/kubernetes/helm/charts/frontend/values.yaml
+++ b/deployment/kubernetes/helm/charts/frontend/values.yaml
@@ -95,7 +95,6 @@ configJs: |
       DATA_OASIS_TOOL_URL = 'YOUR_DATA_OASIS_TOOL_URL',
       DATAQ_TOOL_URL = 'YOUR_DATAQ_TOOL_URL',
       DATASPHERE_TOOL_URL = 'YOUR_DATASPHERE_TOOL_URL',
-      GPT4ALL_CHATBOT_TOOL_URL = 'YOUR_GPT4ALL_CHATBOT_TOOL_URL',
       EXTOLLO_TOOL_URL = 'YOUR_EXTOLLO_TOOL_URL',
       POWER_BI_TOOL_URL = 'YOUR_POWER_BI_TOOL_URL',
       SAC_TOOL_URL = 'YOUR_SAC_TOOL_URL',
@@ -112,7 +111,8 @@ configJs: |
       SMART_DATA_GOVERNANCE_URL = 'YOUR_SMART_DATA_GOVERNANCE_URL',
       DATA_PRODUCT_API_BASEURL = 'YOUR_DATA_PRODUCT_API_BASEURL',
       MATOMO_API_BASEURL='YOUR_MATOMO_API_BASEURL',
-      SPIRE_URL='YOUR_SPIRE_URL'
+      SPIRE_URL='YOUR_SPIRE_URL',
+      GENAI_DIRECT_CHAT_URL = 'YOUR_GENAI_DIRECT_CHAT_URL'
 
     };
 
