--- a/deployment/kubernetes/helm/values.yaml
+++ b/deployment/kubernetes/helm/values.yaml
@@ -82,7 +82,6 @@ frontend:
         DATA_OASIS_TOOL_URL = 'YOUR_DATA_OASIS_TOOL_URL',
         DATAQ_TOOL_URL = 'YOUR_DATAQ_TOOL_URL',
         DATASPHERE_TOOL_URL = 'YOUR_DATASPHERE_TOOL_URL',
-        GPT4ALL_CHATBOT_TOOL_URL = 'YOUR_GPT4ALL_CHATBOT_TOOL_URL',
         EXTOLLO_TOOL_URL = 'YOUR_EXTOLLO_TOOL_URL',
         POWER_BI_TOOL_URL = 'YOUR_POWER_BI_TOOL_URL',
         SAC_TOOL_URL = 'YOUR_SAC_TOOL_URL',
@@ -98,7 +97,8 @@ frontend:
         SAP_CONNECTION_BOOK_URL = 'YOUR_SAP_CONNECTION_BOOK_URL',
         SMART_DATA_GOVERNANCE_URL = 'YOUR_SMART_DATA_GOVERNANCE_URL',
         DATA_PRODUCT_API_BASEURL = 'http://localhost:7184/api',
-        SPIRE_URL = 'YOUR_SPIRE_URL'
+        SPIRE_URL = 'YOUR_SPIRE_URL',
+        GENAI_DIRECT_CHAT_URL = 'YOUR_GENAI_DIRECT_CHAT_URL',
       };
 
       window["STORAGE_INJECTED_ENVIRONMENT"]={
