--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -75,7 +75,6 @@ BPT_TOOL_URL=${PROJECTMO_BPT_TOOL_URL}
 DATA_OASIS_TOOL_URL=${PROJECTMO_DATA_OASIS_TOOL_URL}
 DATAQ_TOOL_URL=${PROJECTMO_DATAQ_TOOL_URL}
 DATASPHERE_TOOL_URL=${PROJECTMO_DATASPHERE_TOOL_URL}
-GPT4ALL_CHATBOT_TOOL_URL=${PROJECTMO_GPT4ALL_CHATBOT_TOOL_URL}
 EXTOLLO_TOOL_URL=${PROJECTMO_EXTOLLO_TOOL_URL}
 POWER_BI_TOOL_URL=${PROJECTMO_POWER_BI_TOOL_URL}
 SAC_TOOL_URL=${PROJECTMO_SAC_TOOL_URL}
@@ -93,3 +92,4 @@ ROPA_PROCEDURE_ID_PREFIX={PROJECTMO_ROPA_PROCEDURE_ID_PREFIX}
 MATOMO_API_BASEURL={PROJECTMO_MATOMO_API_BASEURL}
 MATOMO_APP_URL=${PROJECTMO_MATOMO_APP_URL}
 SPIRE_URL={PROJECTMO_SPIRE_URL}
+GENAI_DIRECT_CHAT_URL={PROJECTMO_GENAI_DIRECT_CHAT_URL}
