--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -153,4 +153,5 @@ DATA_PRODUCT_API_BASEURL=YOUR_DATA_PRODUCT_API_BASEURL
 ROPA_PROCEDURE_ID_PREFIX=YOUR_ROPA_PROCEDURE_ID_PREFIX
 MATOMO_API_BASEURL=YOUR_MATOMO_API_BASEURL
 SPIRE_URL=YOUR_SPIRE_URL
+GENAI_DIRECT_CHAT_URL=YOUR_GENAI_DIRECT_CHAT_URL
 #Variables for Feature Controlling - END
