--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -65,9 +65,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.6",
-    "@mui/system": "^5.10.6",
-    "@mui/x-date-pickers": "^5.0.2",
+    "@mui/material": "5.14.16",
+    "@mui/system": "5.14.16",
+    "@mui/x-date-pickers": "6.17.0",
     "@react-pdf/renderer": "^3.0.0",
     "ace-builds": "^1.4.12",
     "cors": "^2.8.5",
