added dna-backend changes

--- a/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
+++ b/packages/backend/dnambc-lib/src/main/resources/api/Solution.yaml
@@ -779,6 +779,9 @@ definitions:
       mobileNumber:
         type: string
         description: "Mobile number of the user"
+      authToken:
+        type: string
+        description: "Authentication Token of the user"
 
   SolutionProjectStatusVO:
     type: object
