updated data layer and governance

--- a/packages/frontend/.env
+++ b/packages/frontend/.env
@@ -120,6 +120,7 @@ ENABLE_CHRONOS_FORECASTING_SERVICE=false
 ENABLE_DATALAKE_SERVICE=false
 
 DATA_GOVERNANCE_INFO_LINK = DATA_GOVERNANCE_INFO_LINK
+BISO_CONTACTS_URL = YOUR_BISO_CONTACTS_URL
 
 UDEMY_URL=YOUR_UDEMY_URL
 LINKEDIN_LEARNING_URL=YOUR_LINKEDIN_LEARNING_URL
@@ -144,10 +145,7 @@ TERMS_OF_USE_CONTENT=YOUR_TOU_CONTENT
 COMING_SOON_CONTENT=YOUR_COMING_SOON_CONTENT
 
 DATA_MODEL_URL=YOUR_DATA_MODEL_URL
-KPI_WIKI_URL=YOUR_KPI_WIKI_URL
-CARLA_ECONOMIC_MODEL_URL=YOUR_CARLA_ECONOMIC_MODEL_URL
 CORPORATE_DATA_CATALOG_URL=YOUR_CORPORATE_DATA_CATALOG_URL
-SAP_CONNECTION_BOOK_URL=YOUR_SAP_CONNECTION_BOOK_URL
 SMART_DATA_GOVERNANCE_URL=YOUR_SMART_DATA_GOVERNANCE_URL
 DATA_PRODUCT_API_BASEURL=YOUR_DATA_PRODUCT_API_BASEURL
 ROPA_PROCEDURE_ID_PREFIX=YOUR_ROPA_PROCEDURE_ID_PREFIX
