--- a/packages/frontend/.docker.env
+++ b/packages/frontend/.docker.env
@@ -81,11 +81,9 @@ SAC_TOOL_URL=${PROJECTMO_SAC_TOOL_URL}
 TERMS_OF_USE_CONTENT=${PROJECTMO_TOU_CONTENT}
 COMING_SOON_CONTENT=${PROJECTMO_COMING_SOON_CONTENT}
 DATA_MODEL_URL=${PROJECTMO_DATA_MODEL_URL}
-KPI_WIKI_URL=${PROJECTMO_KPI_WIKI_URL}
-CARLA_ECONOMIC_MODEL_URL=${PROJECTMO_CARLA_ECONOMIC_MODEL_URL}
 CORPORATE_DATA_CATALOG_URL=${PROJECTMO_CORPORATE_DATA_CATALOG_URL}
-SAP_CONNECTION_BOOK_URL=${PROJECTMO_SAP_CONNECTION_BOOK_URL}
 SMART_DATA_GOVERNANCE_URL=${PROJECTMO_SMART_DATA_GOVERNANCE_URL}
+BISO_CONTACTS_URL = ${PROJECTMO_BISO_CONTACTS_URL}
 DATA_PRODUCT_API_BASEURL=${PROJECTMO_DATA_PRODUCT_API_BASEURL}
 DATAIKU_LICENSE_CREATION_CONTENT={PROJECTMO_DATAIKU_LICENSE_CREATION_CONTENT}
 ROPA_PROCEDURE_ID_PREFIX={PROJECTMO_ROPA_PROCEDURE_ID_PREFIX}
