updated data product

--- a/packages/data-product-mfe/.env
+++ b/packages/data-product-mfe/.env
@@ -3,4 +3,5 @@ API_BASEURL=
 DATA_PRODUCT_API_BASEURL =
 DATA_GOVERNANCE_HTML_FOR_CHINA_DATA =
 DATA_PRODUCT_PUBLISH_TOU =
-INFORMATION_POLICY_LINK = 
+INFORMATION_POLICY_LINK =
+DDX_URL = YOUR_DDX_URL 
