--- a/packages/data-product-mfe/.docker.env
+++ b/packages/data-product-mfe/.docker.env
@@ -4,3 +4,4 @@ DATA_PRODUCT_API_BASEURL=${PROJECTSMO_DATA_PRODUCT_API_BASEURL}
 DATA_GOVERNANCE_HTML_FOR_CHINA_DATA=${PROJECTSMO_DATA_GOVERNANCE_HTML_FOR_CHINA_DATA}
 DATA_PRODUCT_TOU_HTML=${PROJECTSMO_DATA_PRODUCT_TOU_HTML}
 INFORMATION_POLICY_LINK=${PROJECTSMO_INFORMATION_POLICY_LINK}
+DDX_URL=${PROJECTMO_DDX_URL}
